fix slider - but still not showing missing poster correctly

--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -1,39 +1,4 @@
-.slick-slide{
-  margin: 0 20px;
-}
 
-.slick-next {
-  right: 0;
-}
-
-.slick-prev {
-  /* left: -52px !important; */
-  left: 0;
-}
-.slick-next:before,
-.slick-prev:before {
-  content: "" !important;
-}
-
-.prev-slick-arrow {
-  color: #000000;
-  font-size: 45px;
-  left: 0px;
-}
-.next-slick-arrow {
-  color: #000000;
-  font-size: 45px;
-  right: 0px;
-}
-
-.slick-slide {
-  filter: blur(5px); /* Apply blur effect to all slides */
-  transition: filter 0.3s ease;
-}
-
-.slick-slide.slick-center {
-  filter: blur(0); /* Remove blur effect for the center slide */
-}
 
 .watchlistContainer {
   /* display: grid;
